--- a/docker/packager/cctools/Dockerfile
+++ b/docker/packager/cctools/Dockerfile
@@ -1,6 +1,6 @@
-# This is a hack to significantly reduce the build time of the clickhouse/binary-builder
+# This is a hack to significantly reduce the build time of the altinityinfra/binary-builder
 # It's based on the assumption that we don't care of the cctools version so much
-# It event does not depend on the clickhouse/fasttest in the `docker/images.json`
+# It event does not depend on the altinityinfra/fasttest in the `docker/images.json`
 ARG FROM_TAG=latest
 FROM altinityinfra/fasttest:$FROM_TAG as builder
 
