--- a/docker/test/unit/Dockerfile
+++ b/docker/test/unit/Dockerfile
@@ -1,5 +1,5 @@
 # rebuild in #33610
-# docker build -t clickhouse/unit-test .
+# docker build -t altinityinfra/unit-test .
 ARG FROM_TAG=latest
 FROM altinityinfra/stateless-test:$FROM_TAG
 
