--- a/.gitmodules
+++ b/.gitmodules
@@ -372,3 +372,6 @@
 [submodule "contrib/double-conversion"]
 	path = contrib/double-conversion
 	url = https://github.com/ClickHouse/double-conversion.git
+[submodule "contrib/rapidgzip"]
+	path = contrib/rapidgzip
+	url = git@github.com:mxmlnkn/rapidgzip.git
