--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -227,6 +227,7 @@ add_contrib (google-benchmark-cmake google-benchmark)
 add_contrib (ulid-c-cmake ulid-c)
 
 add_contrib (libssh-cmake libssh)
+add_contrib (rapidgzip-cmake rapidgzip)
 
 # Put all targets defined here and in subdirectories under "contrib/<immediate-subdir>" folders in GUI-based IDEs.
 # Some of third-party projects may override CMAKE_FOLDER or FOLDER property of their targets, so they would not appear
