disable unit tests temporarily

--- a/.github/workflows/release_branches.yml
+++ b/.github/workflows/release_branches.yml
@@ -41,15 +41,15 @@ jobs:
       #   run: |
       #     cd "$GITHUB_WORKSPACE/tests/ci"
       #     python3 run_check.py
-      - name: Python unit tests
-        run: |
-          cd "$GITHUB_WORKSPACE/tests/ci"
-          echo "Testing the main ci directory"
-          python3 -m unittest discover -s . -p 'test_*.py'
-          for dir in *_lambda/; do
-            echo "Testing $dir"
-            python3 -m unittest discover -s "$dir" -p 'test_*.py'
-          done
+      # - name: Python unit tests
+      #   run: |
+      #     cd "$GITHUB_WORKSPACE/tests/ci"
+      #     echo "Testing the main ci directory"
+      #     python3 -m unittest discover -s . -p 'test_*.py'
+      #     for dir in *_lambda/; do
+      #       echo "Testing $dir"
+      #       python3 -m unittest discover -s "$dir" -p 'test_*.py'
+      #     done
       - name: PrepareRunConfig
         id: runconfig
         run: |
