Disable alternative architecture builds

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -231,30 +231,30 @@ jobs:
       build_name: binary_aarch64_v80compat
       data: ${{ needs.RunConfig.outputs.data }}
       checkout_depth: 0
-  BuilderBinRISCV64:
-    needs: [RunConfig, BuilderDebRelease]
-    if: ${{ !failure() && !cancelled() }}
-    uses: ./.github/workflows/reusable_build.yml
-    with:
-      build_name: binary_riscv64
-      data: ${{ needs.RunConfig.outputs.data }}
-      checkout_depth: 0
-  BuilderBinS390X:
-    needs: [RunConfig, BuilderDebRelease]
-    if: ${{ !failure() && !cancelled() }}
-    uses: ./.github/workflows/reusable_build.yml
-    with:
-      build_name: binary_s390x
-      data: ${{ needs.RunConfig.outputs.data }}
-      checkout_depth: 0
-  BuilderBinLoongarch64:
-    needs: [RunConfig, BuilderDebRelease]
-    if: ${{ !failure() && !cancelled() }}
-    uses: ./.github/workflows/reusable_build.yml
-    with:
-      build_name: binary_loongarch64
-      data: ${{ needs.RunConfig.outputs.data }}
-      checkout_depth: 0
+#  BuilderBinRISCV64:
+#    needs: [RunConfig, BuilderDebRelease]
+#    if: ${{ !failure() && !cancelled() }}
+#    uses: ./.github/workflows/reusable_build.yml
+#    with:
+#      build_name: binary_riscv64
+#      data: ${{ needs.RunConfig.outputs.data }}
+#      checkout_depth: 0
+#  BuilderBinS390X:
+#    needs: [RunConfig, BuilderDebRelease]
+#    if: ${{ !failure() && !cancelled() }}
+#    uses: ./.github/workflows/reusable_build.yml
+#    with:
+#      build_name: binary_s390x
+#      data: ${{ needs.RunConfig.outputs.data }}
+#      checkout_depth: 0
+#  BuilderBinLoongarch64:
+#    needs: [RunConfig, BuilderDebRelease]
+#    if: ${{ !failure() && !cancelled() }}
+#    uses: ./.github/workflows/reusable_build.yml
+#    with:
+#      build_name: binary_loongarch64
+#      data: ${{ needs.RunConfig.outputs.data }}
+#      checkout_depth: 0
 ############################################################################################
 ##################################### Docker images  #######################################
 ############################################################################################
