--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -154,7 +154,7 @@ add_contrib (idna-cmake idna)
 add_contrib (datasketches-cpp-cmake datasketches-cpp)
 add_contrib (incbin-cmake incbin)
 add_contrib (sqids-cpp-cmake sqids-cpp)
-add_contrib (mongo-c-driver-cmake mongo-c-driver)
+add_contrib (mongo-c-driver-cmake mongo-c-driver) # requires: zlib
 add_contrib (mongo-cxx-driver-cmake mongo-cxx-driver) # requires: libmongoc, libbson
 
 option(ENABLE_NLP "Enable NLP functions support" ${ENABLE_LIBRARIES})
