start adding llama.cpp for gguf

--- a/src/Functions/ggmlEvaluate/CMakeLists.txt
+++ b/src/Functions/ggmlEvaluate/CMakeLists.txt
@@ -1,6 +1,7 @@
 include("${ClickHouse_SOURCE_DIR}/cmake/dbms_glob_sources.cmake")
 
 add_headers_and_sources(clickhouse_functions_ggmlEvaluate .)
+add_headers_and_sources(clickhouse_functions_ggmlEvaluate llama-cpp)
 add_headers_and_sources(clickhouse_functions_ggmlEvaluate models)
 add_library(clickhouse_functions_ggmlEvaluate ${clickhouse_functions_ggmlEvaluate_sources} ${clickhouse_functions_ggmlEvaluate_headers})
 
