fix build on freebsd, documentation for mongodb table func

--- a/contrib/mongo-c-driver-cmake/CMakeLists.txt
+++ b/contrib/mongo-c-driver-cmake/CMakeLists.txt
@@ -52,12 +52,19 @@ set(MONGOC_ENABLE_SRV 1)
 # DNS
 set(MONGOC_HAVE_DNSAPI 0)
 set(MONGOC_HAVE_RES_SEARCH 0)
-set(MONGOC_HAVE_RES_NSEARCH 1)
-set(MONGOC_HAVE_RES_NCLOSE 1)
+set(MONGOC_HAVE_RES_NSEARCH 0)
+set(MONGOC_HAVE_RES_NCLOSE 0)
+set(MONGOC_HAVE_RES_NDESTROY 0)
+
+if (OS_LINUX OR OS_DARWIN)
+    set(MONGOC_HAVE_RES_NSEARCH 1)
+    set(MONGOC_HAVE_RES_NCLOSE 1)
+else ()
+    set(MONGOC_HAVE_RES_SEARCH 1)
+endif ()
+
 if (OS_DARWIN)
     set(MONGOC_HAVE_RES_NDESTROY 1)
-else ()
-    set(MONGOC_HAVE_RES_NDESTROY 0)
 endif()
 
 set(MONGOC_ENABLE_COMPRESSION 1)
