Copy llama.cpp intor ggmlEvaluate/contrib. Support gguf models

--- a/contrib/ggml-cmake/CMakeLists.txt
+++ b/contrib/ggml-cmake/CMakeLists.txt
@@ -1,5 +1,6 @@
-set(GGML_CPP_SOURCE_DIR "${ClickHouse_SOURCE_DIR}/contrib/ggml/src")
-set(GGML_CPP_INCLUDE_DIR "${ClickHouse_SOURCE_DIR}/contrib/ggml/include")
+set(GGML_DIR "${ClickHouse_SOURCE_DIR}/contrib/ggml")
+set(GGML_CPP_SOURCE_DIR "${GGML_DIR}/src")
+set(GGML_CPP_INCLUDE_DIR "${GGML_DIR}/include")
 
 set(GGML_SRCS
     "${GGML_CPP_SOURCE_DIR}/ggml.c"
@@ -13,6 +14,7 @@ set (GGML_PUBLIC_HDRS
     ${GGML_CPP_INCLUDE_DIR}/ggml/ggml-backend.h
 )
 set(GGML_HDRS
+    "${GGML_DIR}/ggml-common.h"
     "${GGML_CPP_SOURCE_DIR}/ggml-backend-impl.h"
     "${GGML_CPP_SOURCE_DIR}/ggml-impl.h"
     ${GGML_PUBLIC_HDRS}
@@ -99,7 +101,7 @@ endif()
 add_library(_ggml
     ${GGML_SRCS} ${GGML_HDRS}
 )
-target_include_directories(_ggml PUBLIC ${GGML_CPP_INCLUDE_DIR} ${GGML_CPP_INCLUDE_DIR}/ggml)
+target_include_directories(_ggml PUBLIC ${GGML_DIR} ${GGML_CPP_INCLUDE_DIR} ${GGML_CPP_INCLUDE_DIR}/ggml)
 
 target_compile_options(_ggml PRIVATE ${GGML_ARCH_FLAGS})
 target_compile_definitions(_ggml PRIVATE ${GGML_COMPILE_DEFENITIONS})
