Experimental ColumnFSST work

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -563,7 +563,10 @@ if (TARGET ch_contrib::datasketches)
 endif ()
 
 target_link_libraries (clickhouse_common_io PRIVATE ch_contrib::lz4)
-# target_link_libraries (clickhouse_common_io PRIVATE ch_contrib::fsst)
+
+if (TARGET ch_contrib::fsst)
+target_link_libraries (clickhouse_common_io PRIVATE ch_contrib::fsst)
+endif()
 
 if (TARGET ch_contrib::qpl)
     dbms_target_link_libraries(PUBLIC ch_contrib::qpl)
