--- a/contrib/ggml-cmake/CMakeLists.txt
+++ b/contrib/ggml-cmake/CMakeLists.txt
@@ -63,7 +63,11 @@ elseif (ARCH_AMD64)
 elseif (ARCH_PPC64LE)
     # PowerPC64LE CPU architecture (ClickHouse supports little-endian ppc64 only)
 
-    list(APPEND GGML_ARCH_FLAGS -mcpu=powerpc64le -mpower9-vector -maltivec)
+    list(APPEND GGML_ARCH_FLAGS -mcpu=powerpc64le -maltivec -D__SSE2__=1 -DNO_WARN_X86_INTRINSICS)
+    if (POWER9)
+        list(APPEND GGML_ARCH_FLAGS -mpower9-vector)
+    endif()
+
 endif()
 
 #
