--- a/.github/workflows/reusable_test.yml
+++ b/.github/workflows/reusable_test.yml
@@ -84,7 +84,6 @@ jobs:
   Test:
     needs: [runner_labels_setup]
     runs-on: ${{ fromJson(needs.runner_labels_setup.outputs.runner_labels) }}
-    if: ${{ !failure() && !cancelled() && contains(fromJson(inputs.data).jobs_data.jobs_to_do, inputs.test_name) }}
     name: ${{inputs.test_name}}${{ fromJson(inputs.data).jobs_data.jobs_params[inputs.test_name].num_batches > 1 && format('-{0}',matrix.batch) || '' }}
     env:
       GITHUB_JOB_OVERRIDDEN: ${{inputs.test_name}}${{ fromJson(inputs.data).jobs_data.jobs_params[inputs.test_name].num_batches > 1 && format('-{0}',matrix.batch) || '' }}
@@ -115,6 +114,8 @@ jobs:
         uses: ./.github/actions/common_setup
         with:
           job_type: test
+      - name: Docker setup
+        uses: ./.github/actions/docker_setup
       - name: Setup batch
         if: ${{ fromJson(inputs.data).jobs_data.jobs_params[inputs.test_name].num_batches > 1 }}
         run: |
@@ -132,6 +133,7 @@ jobs:
             --infile ${{ toJson(inputs.data) }} \
             --job-name '${{inputs.test_name}}' \
             --run \
+            --force \
             --run-command '''${{inputs.run_command}}'''
       - name: Post run
         if: ${{ !cancelled() }}
