make stress and integration always run

--- a/.github/workflows/release_branches.yml
+++ b/.github/workflows/release_branches.yml
@@ -219,7 +219,7 @@ jobs:
     secrets: inherit
     with:
       test_name: ClickHouse build check
-      runner_type: altinity-on-demand, altinity-type-cax11, altinity-in-hel1, altinity-image-arm-system-ubuntu-22.04
+      runner_type: altinity-on-demand, altinity-setup-reporter, altinity-type-cax11, altinity-in-hel1, altinity-image-arm-system-ubuntu-22.04
       data: ${{ needs.RunConfig.outputs.data }}
   BuilderSpecialReport:
     # run report check for failed builds to indicate the CI error
@@ -232,7 +232,7 @@ jobs:
     secrets: inherit
     with:
       test_name: ClickHouse special build check
-      runner_type: altinity-on-demand, altinity-type-cax11, altinity-in-hel1, altinity-image-arm-system-ubuntu-22.04
+      runner_type: altinity-on-demand, altinity-setup-reporter, altinity-type-cax11, altinity-in-hel1, altinity-image-arm-system-ubuntu-22.04
       data: ${{ needs.RunConfig.outputs.data }}
   MarkReleaseReady:
     if: ${{ !failure() && !cancelled() }}
@@ -241,7 +241,7 @@ jobs:
       - BuilderBinDarwinAarch64
       - BuilderDebRelease
       - BuilderDebAarch64
-    runs-on: [self-hosted, altinity-on-demand, altinity-type-cax11, altinity-in-hel1, altinity-image-arm-system-ubuntu-22.04]
+    runs-on: [self-hosted, altinity-on-demand, altinity-setup-reporter, altinity-type-cax11, altinity-in-hel1, altinity-image-arm-system-ubuntu-22.04]
     steps:
       - name: Debug
         run: |
